2019-09-17  Yannick Moy  <moy@adacore.com>

	* libgnat/s-arit64.adb (Double_Divide): Simplify needlessly
	complex computation. Fix comments.
	(Scaled_Divide): Fix comments. Explain why implementation does
	not suffer from bugs in Algorithm D from 2nd Edition of TAOCP.

2019-09-17  Yannick Moy  <moy@adacore.com>

	* libgnat/s-arit64.adb (Scaled_Divide): Add protection against
	undesirable wrap-around.

2019-09-17  Yannick Moy  <moy@adacore.com>

	* libgnat/s-arit64.adb (Double_Divide): Fix two possible
	overflows.

2019-09-17  Dmitriy Anisimkov  <anisimko@adacore.com>

	* make_util.ads (On_Windows): Move...
	* osint.ads (On_Windows): There.
	* osint.adb (OS_Time_To_GNAT_Time): If odd incremented on
	Windows before conversion to Time_Stamp_Type.

2019-09-17  Yannick Moy  <moy@adacore.com>

	* sem_spark.adb (Check_Declaration): Do not check the assignment
	from an illegal declaration.

2019-09-17  Bob Duff  <duff@adacore.com>

	* doc/gnat_ugn/gnat_and_program_execution.rst: Clarify
	documentation.
	* gnat_ugn.texi: Regenerate.
	* libgnat/s-stausa.ads: Clarify comments.

2019-09-17  Steve Baird  <baird@adacore.com>

	* sem_util.adb (Wrong_Type): In deciding to suppress a message,
	it is not enough for In_Instance to be True; in addition,
	In_Generic_Actual (Expr) must be False.
	* sem_type.adb (In_Generic_Actual): Fix bug where traversal of
	parents skips every other node.

2019-09-17  Claire Dross  <dross@adacore.com>

	* sem_spark.adb (Get_Observed_Or_Borrowed_Expr): If the
	definition of a local borrower contains calls to traversal
	functions, the borrowed expression is the first parameter of the
	first traversal function call in the definition.

2019-09-17  Ed Falis  <falis@adacore.com>

	* doc/gnat_rm/implementation_defined_pragmas.rst: Remove
	section.
	* gnat_rm.texi, gnat_ugn.texi: Regenerate.

2019-09-17  Vadim Godunko  <godunko@adacore.com>

	* libgnat/g-exptty.ads (Close_Input): New subprogram.
	* libgnat/g-exptty.adb (Close_Input): New subprogram.