@@ -1452,18 +1452,21 @@ package Exp_Dbug is
    --  a character literal, the name is encoded as described in the following
    --  paragraph.
 
-   --  A name QUhh, where each 'h' is a lower-case hexadecimal digit, stands
-   --  for a character whose Unicode encoding is hh, and QWhhhh likewise stands
-   --  for a wide character whose encoding is hhhh. The representation values
-   --  are encoded as for ordinary enumeration literals (and have no necessary
-   --  relationship to the values encoded in the names).
+   --  The characters 'a'..'z' and '0'..'9' are represented as Qc, where 'c'
+   --  stands for the character itself.  A name QUhh, where each 'h' is a
+   --  lower-case hexadecimal digit, stands for a character whose Unicode
+   --  encoding is hh, and QWhhhh likewise stands for a wide character whose
+   --  encoding is hhhh. The representation values are encoded as for ordinary
+   --  enumeration literals (and have no necessary relationship to the values
+   --  encoded in the names).
 
    --  For example, given the type declaration
 
-   --    type x is (A, 'C', B);
+   --    type x is (A, 'C', 'b');
 
    --  the second enumeration literal would be named QU43 and the value
-   --  assigned to it would be 1.
+   --  assigned to it would be 1, and the third enumeration literal would be
+   --  named Qb and the value assigned to it would be 2.
 
    -----------------------------------------------
    -- Secondary Dispatch tables of tagged types --
